[gd_scene load_steps=8 format=2]

[ext_resource path="res://grafica/Eventos/setting_texture.png" type="Texture" id=1]
[ext_resource path="res://prefebs/Settigns.gd" type="Script" id=2]
[ext_resource path="res://grafica/ShopView/progressive_bar-under.png" type="Texture" id=3]
[ext_resource path="res://grafica/ShopView/Asset 3-8.png" type="Texture" id=4]
[ext_resource path="res://grafica/ShopView/Asset 5-8.png" type="Texture" id=5]
[ext_resource path="res://grafica/ShopView/Asset 7-8.png" type="Texture" id=6]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/settings.png-a46ad77751ce0b1b7127a20db5d746ab.stex"

[node name="Settigns" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 18.0
anchor_bottom = 31.825
margin_left = -17.0
margin_top = -17.0
margin_right = 17.0
margin_bottom = 22.0
color = Color( 0, 0, 0, 0.313726 )

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_right = 18.0
anchor_bottom = 32.0
margin_left = -15.0
margin_top = 99.0
margin_bottom = -99.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Popup"]
anchor_left = 5.85
anchor_top = 14.55
anchor_right = 8.35
anchor_bottom = 15.14
margin_left = -1.52588e-05
margin_top = -6.10352e-05
margin_bottom = -3.60004
texture = ExtResource( 3 )
expand = true

[node name="TextureProgress" type="TextureProgress" parent="Popup/TextureRect2"]
anchor_left = 0.038
anchor_top = 0.3
anchor_right = 0.975
anchor_bottom = 0.7
margin_left = -0.0420003
margin_right = -0.0250092
step = 2.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Control" type="Control" parent="Popup"]
anchor_left = 7.775
anchor_top = 14.475
anchor_right = 8.425
anchor_bottom = 15.1
margin_left = -80.0
margin_right = -80.0
rect_pivot_offset = Vector2( 0, 13.0001 )

[node name="Sprite" type="Sprite" parent="Popup/Control"]
position = Vector2( 14, 13 )
texture = ExtResource( 6 )

[node name="Settigns" type="Button" parent="."]
anchor_left = 0.639
anchor_top = 0.152
anchor_right = 0.717
anchor_bottom = 0.195
margin_left = -0.0800476
margin_top = -0.560013
margin_right = -0.23999
margin_bottom = 0.399994
icon = SubResource( 1 )
flat = true
icon_align = 1

[connection signal="mouse_entered" from="Popup/Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Popup/Control" to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="Settigns" to="." method="_on_Settigns_pressed"]
